--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.5",
+    "bluebird": "~3.4.0",
     "body-parser": "~1.13.2",
+    "bookshelf": "~0.9.5",
+    "compression": "~1.6.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "knex": "~0.11.5",
-    "bluebird": "~3.4.0",
-    "bookshelf": "~0.9.5",
-    "compression": "~1.6.2",
-    "static-favicon": "~2.0.0-alpha",
     "express-handlebars": "~3.0.0",
+    "express-session": "^1.13.0",
+    "jade": "~1.11.0",
+    "knex": "~0.11.5",
+    "lodash": "~4.13.1",
+    "morgan": "~1.6.1",
     "passport": "~0.3.2",
     "passport-local": "~1.0.0",
-    "lodash": "~4.13.1"
+    "serve-favicon": "~2.3.0",
+    "static-favicon": "~2.0.0-alpha"
   }
 }
